# ailia-models-rust

./: .gitignore  README.md  download_onnx.py
detic/: Cargo.toml
detic/src/: main.rs
pose_estimation/: Cargo.toml
pose_estimation/src/: main.rs
resnet18_ailia_classifier/: Cargo.toml  labels.txt
resnet18_ailia_classifier/src/: main.rs
rust_wrapper/: Cargo.toml  download_onnx.py
rust_wrapper/ailia-detector-sys/: Cargo.toml  build.rs  wrapper.h
rust_wrapper/ailia-detector-sys/src/: bindings.rs  lib.rs
rust_wrapper/ailia-sys/: Cargo.toml  build.rs  wrapper.h
rust_wrapper/ailia-sys/src/: bindings.rs  lib.rs
rust_wrapper/src/: classifier.rs  detector.rs  environment.rs  lib.rs  macros.rs  network.rs  pose_estimator.rs  prelude.rs
yolox/: Cargo.toml
yolox/src/: main.rs
