[package]
name = "ailia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ailia-sys = { path = "./ailia-sys/" }
# ailia-detector-sys = { path = "./ailia-detector-sys/" }
thiserror = "1.0.38"
image = "0.24.5"
opencv = "0.76.1"
num-traits = "0.2.15"
